--- a/Prepare/config.properties
+++ b/Prepare/config.properties
@@ -1,4 +1,4 @@
-db.driver.class = org.mariadb.jdbc.Driver
+db.driver = org.mariadb.jdbc.Driver
 db.url = jdbc:mariadb://localhost:3306/FormationApp
 db.login = root
 db.password = fms2024
