--- a/files/config.properties
+++ b/files/config.properties
@@ -1,4 +1,5 @@
-db.driver = org.mariadb.jdbc.Driver
-db.url = jdbc:mariadb://localhost:3306/FormationApp
-db.login = root
-db.password = fms2024
+#Tue Feb 06 15:59:01 CET 2024
+db.password=fms2024
+db.url=jdbc\:mariadb\://localhost\:3306/FormationApp
+db.login=root
+db.driver=org.mariadb.jdbc.Driver
